--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
   },
   "homepage": "https://github.com/anupkb/netflix-gpt#readme",
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.5",
     "firebase": "^10.12.0",
     "parcel": "^2.12.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
